feat: CFN-679 : Create endpoint to fetch Figma node and return minimized JSON with image URLs
