# routes/api.php
@@ -1,6 +1,10 @@
 <?php
 
-use App\Http\Controllers\Figma\TailwindConfigController;
+use App\Http\Controllers\Api\FigmaFetchNodesWithImageController;
+use App\Http\Controllers\Api\TailwindConfigController;
 use Illuminate\Support\Facades\Route;
 
-Route::post('/figma/tailwind-config', [TailwindConfigController::class, 'generate']);
+Route::prefix('figma')->group(function() {
+    Route::post('/tailwind-config', [TailwindConfigController::class, 'generate'])->name('tailwind-config.generate');
+    Route::post('/fetch-nodes-with-image', [FigmaFetchNodesWithImageController::class, 'generate'])->name('fetch-nodes-with-image.generate');
+});
